src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/EXTTextureStorage_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTTextureStorage_StringErrorContext.class */
public final class EXTTextureStorage_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glTexStorage1DEXT(IIII)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureStorageErrorContext");
        methods.put("glTexStorage2DEXT(IIIII)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureStorageErrorContext");
        methods.put("glTexStorage3DEXT(IIIIII)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureStorageErrorContext");
        methods.put("glTextureStorage1DEXT(IIIII)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureStorageErrorContext");
        methods.put("glTextureStorage2DEXT(IIIIII)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureStorageErrorContext");
        methods.put("glTextureStorage3DEXT(IIIIIII)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureStorageErrorContext");
        return methods;
    }
}
